# clubfridge-neo

./: Cargo.toml  plan.md
.github/workflows/: ci.yml
src/: log_viewer.rs  logging.rs  main.rs  running.rs  state.rs  ui.rs
