[package]
name = "clubfridge-neo"
version = "0.11.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "=1.0.104"
clap = { version = "=4.6.3", features = ["derive"] }
jiff = { version = "=0.2.34", features = ["serde"] }
rust_decimal = "=1.42.1"
rust_decimal_macros = "=1.40.0"
secrecy = "=0.10.3"
self_update = { version = "=0.42.0", default-features = false, features = ["compression-flate2", "rustls"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
sqlx = { version = "=0.9.0", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "=1.53.1", features = ["fs", "time"] }
tracing = "=0.1.44"
tracing-appender = "=0.2.5"
tracing-subscriber = "=0.3.23"
ulid = "=3.0.0"
vereinsflieger = "=0.8.0"

[dependencies.iced]
version = "=0.14.0"
default-features = false
features = ["tokio", "wayland", "wgpu"]

[dev-dependencies]
tokio = { version = "=1.53.1", features = ["macros"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
